--- a/gystrade/index.html
+++ b/gystrade/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GyS Trade | Dashboard</title>
+    <title>sisioS Trade | Dashboard</title>
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
 
